<resources>
    <string name="app_name">list_view</string>
    <string name="movie_name">movie name</string>
    <string name="ng_n_ng">Ngôn ngữ</string>
    <string name="nh_gi">Đánh giá</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="m_t">Mô Tả</string>
    <string name="th_lo_i">Thể loại</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="ng_y_chi_u">Ngày chiếu</string>
</resources>
